2008-04-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: froze version 2.2.0

	* scripts/make-source-package: update filters after 
	change in device directories

	* conf/FindAce.cmake: prioritize paths relative to ACE_ROOT 
	environmental variable, if present -- issue reported by
	Andrew Dankers.

2008-04-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/CMakeLists.txt: fix broken regression tests for
	individual devices/modules.

2008-04-04  Alessandro Scalzo <alessandro@liralab.it>
	* src/yarp/libYARP_OS/include/yarp/ShmemInputStream.h : modified
	* src/yarp/libYARP_OS/include/yarp/ShmemOutputStream.h : modified
	* src/yarp/libYARP_OS/include/yarp/ShmemHybridStream.h : modified
	* src/yarp/libYARP_OS/src/ShmemInputStream.cpp : modified
	* src/yarp/libYARP_OS/src/ShmemOutputStream.cpp : modified
	* src/yarp/libYARP_OS/src/ShmemHybridStream.cpp : modified
	Reimplemented excluding ACE_SV_Semaphore_Complex, because
	ACE_SV_Semaphore_Complex has a bug (it can fail on acquire()
	without reasons, ERANGE error).

2008-03-29  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Property.cpp: Fix compatibility with ini
	files that use the "=" symbol in nested sections.

2008-03-21  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/modules/CMakeLists.txt: allow ExternalModules.cmake to
	be in build directory $YARP_DIR, to allow alternate builds.
	Clean up paths to external modules in case they have
	components from environment variables with backslashes (important
	on windows).

2008-03-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/externalmodules/: example updated for
	new mechanism - CMakeLists.txt files added, yardevice.cmake
	files removed, README.txt updated.

	* src/modules/: removed yarpdevice.cmake files, no longer used.

2008-03-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/CMakeLists.txt: strip old device compilation
	method
